# duckdb-hudi

./: Cargo.toml  Makefile  README.md  build.rs  vcpkg.json
.github/workflows/: MainDistributionPipeline.yml
src/: lib.rs
