[package]
name = "duckdb_hudi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
strip = true

[[example]]
name = "duckdb_hudi"
path = "src/wasm_lib.rs"
crate-type = ["staticlib"]

[dependencies]
arrow = "57.0.0"
arrow-cast = "57.0.0"
duckdb = { version = "~1.10503.1", features = ["loadable-extension"] }
hudi = { git = "https://github.com/apache/hudi-rs", branch = "main" }
tokio = { version = "1", features = ["rt-multi-thread"] }
vcpkg = "0.2.15"

[build-dependencies]
# Compiles protoc directly from source when system binaries are missing
protobuf-src = "2.0"

[env]
# This forces every single crate's build.rs script to look at the
# protobuf-src binary directory instead of the host machine's system paths
PROTOC = { value = "target/release/build/protobuf-src-*/out/bin/protoc", relative = true }